@@ -4,6 +4,9 @@ NOTE: This is the 1.3.0 development branch.
 Put code changes right below the 1.3.0+CVS label below.
 
 Version 1.3.0+CVS (?? ??? 2011)
+ - 8-Jul-11 cek Fixed XSS vulnerability: malicious javascript in event
+   descriptions submitted by public can do bad things (create admin account,
+   delete events, etc.) when the pending event is viewed by the admin.
  - 2-Jun-11 roj  Bug [ 3307633 ] Non-static method Doc::attachmentsEnabled
  - 1-May-11 roj  Bug [ 3136643 ] php error when trying to log with wrong password. postgresql
  - 26-Apr-11 roj Fixed pass by reference warnings when running PHP 5.3
